fix width of section on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,6 @@ section.module:last-child {
     padding-bottom: 100px;
     background-color: #546A6C;
     color: #fff;
-    width: 100%;
 }
 
 .about a:hover {
